last? ^^ just kidding

--- a/index.html
+++ b/index.html
@@ -38,5 +38,29 @@
         </div>
       </div>
     </section>
+    <section class="past_work">
+      <div class="wrapper">
+        <h2 class="title">Our Work</h2>
+        <div class="logos"><img class="logos__item" src="images/user-adobe.png" alt="Adobe"><img class="logos__item" src="images/user-google.png" alt="Google"><img class="logos__item" src="images/user-paravel.png" alt="Paravel"></div>
+        <ul class="slider_buttons"><a href="#">
+            <li class="current"></li></a><a href="#">
+            <li></li></a><a href="#">
+            <li></li></a></ul>
+        <ul class="slider">
+          <li><img src="https://source.unsplash.com/random" alt="Wordpress"></li>
+          <li><img src="https://source.unsplash.com/user/erondu" alt="Amazon"></li>
+          <li><img src="https://source.unsplash.com/weekly?water" alt="Netflix"></li>
+        </ul>
+      </div>
+    </section>
+    <section class="contact">
+      <div class="wrapper">
+        <h2 class="title">Get in touch</h2>
+        <p class="sub_title">Truffaut DIY keffiyeh, twee messenger bag venmo locavore organic master cleanse marfa jochujang selvage.</p><a class="btn btn--highlight btn--lg" href="#">Contact Us</a>
+      </div>
+    </section>
+    <footer>
+      <p class="copyright">© 2016 <a>Mackenzie Child</a></p>
+    </footer>
   </body>
 </html>
